@@ -3,6 +3,10 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-10
+	- Rule added: (a.2) Return an OWL document if outForm="owl" or "rdf"
+	
+	
 2008-11-04
 	Re. 24: unversioned and latest-version requests
 		- Accept dash ('-') as a valid version in an ontology URI request.
